--- a/main.html
+++ b/main.html
@@ -2,22 +2,24 @@
 <html>
   
   <head>
-    <meta aframe-injected="" name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,shrink-to-fit=no,user-scalable=no,minimal-ui,viewport-fit=cover">
+    <title>Realidade Aumentada by Lady</title>
+    <meta aframe-injected="" name="theme-color" content="black">
     <meta aframe-injected="" name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta aframe-injected="" name="theme-color" content="black">
+    <meta aframe-injected="" name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,shrink-to-fit=no,user-scalable=no,minimal-ui,viewport-fit=cover">
     <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <title>Realidade Aumentada by Lady</title>
   </head>
   
   <body>
     <a-scene>
       
-      <!--Midia Content-->
-      <a-assets>
-      </a-assets>
+      <a-entity camera></a-entity>
       
+      <!--Midia Content-->
+      <a-assets arjs='sourceType: webcam'>
+      </a-assets>
+
       <!--Token/Icon Interpreter-->
       <a-entity>
       </a-entity>
